# LIfe

./: README.md  demo.py  life.py  my_class.py  problems.txt  pyproject.toml  temp.py  test.py
