[tool.poetry]
name = "test"
version = "0.1.0"
description = ""
authors = ["Allan Gongora <agongora4030@gmail.com>"]

[tool.poetry.dependencies]
python = "3.6.9"
pygame = "^1.9.6"
numpy = "^1.19.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
